--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+1.3.0 2021xxxx
+  BF: Service: Uniform use of status 204 for 202 / 404
+      Concerns: OPTIONS
+      Status 404 always refers  storage and not entities/addressed targets in the storage.
+
+1.2.0 2020xxxx
+  NT: Version was skipped
+      For compatibility with the JavaScript implementation
+
 1.1.0 20210225
   BF: Service: Optimization of CONNECT
       Status 507 (Insufficient Storage) now only occurs when a new storage is
