--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.4.0 2022xxxx
+  CR: OpenAPI: Added the missing OpenAPI Specification
+  NT: Harmonization of version numbers for the different implementations
+      Major and minor describe the API, patch refers to the implementation.
+      The version of OpenAPI therefore only uses major and minor, patch is always 0.
+
 1.3.0 20210525
   BF: Service: Uniform use of status 204 for 202 / 404
       Status 404 always refers storage and not entities/addressed targets in the storage.
