--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.4.0 2022xxxx
+  BF: Review: Optimization/Corrections
+  BF: Build: Optimization / correction of the release info process
+  CR: Build: Releases are now only available on the release page
   CR: OpenAPI: Added the missing OpenAPI Specification
   NT: Harmonization of version numbers for the different implementations
       Major and minor describe the API, patch refers to the implementation.
