--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,9 @@
-1.4.0 2022xxxx
+1.4.0 2024xxxx
   BF: Review: Optimization/Corrections
   BF: Build: Optimization / correction of the release info process
   CR: Build: Releases are now only available on the release page
   CR: OpenAPI: Added the missing OpenAPI Specification
+  CR: Project: Moved repository to xml-micro-exchange-php
   NT: Harmonization of version numbers for the different implementations
       Major and minor describe the API, patch refers to the implementation.
       The version of OpenAPI therefore only uses major and minor, patch is always 0.
