--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+1.4.0 2024xxxx
+CR: Service: Optimization of the configuration via environment variables
+    Simplifies the provision as a container.
+    - XMEX_STORAGE_DIRECTORY: Directory of the data storage (./data)
+    - XMEX_STORAGE_QUANTITY: Maximum number of files in data storage (65535)
+    - XMEX_STORAGE_SPACE: Maximum data size of files in data storage in bytes (256 *1024)
+    - XMEX_STORAGE_EXPIRATION: Maximum idle time of the files in seconds (15 *60)
+    TODO: Add description in manual
+    TODO: Test
+
 1.3.1 20240801
 BF: Review: Optimization/Corrections
 BF: Build: Optimization / correction of the release info process
