--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,16 @@ CR: Service: Optimization of the configuration via environment variables
     - XMEX_STORAGE_EXPIRATION: Maximum idle time of the files in seconds (15 *60)
     TODO: Add description in manual
     TODO: Test
+CR: Request: Omission of prefix Base64: for Base64 encoded paths
+    old: /xmex!Base64:Ly9ib29rW2xhc3QoKV0vY2hhcHRlcltsYXN0KCld
+    new: /xmex!Ly9ib29rW2xhc3QoKV0vY2hhcHRlcltsYXN0KCld
+    TODO: Add description in manual
+    TODO: Test
+CR: Request: Omission of prefix 0x for hex encoded paths
+    old: /xmex!0x282f626f6f6b73292f2f6c6173743a3a6265666f7265
+    new: /xmex!282f626f6f6b73292f2f6c6173743a3a6265666f7265
+    TODO: Add description in manual
+    TODO: Test
 
 1.3.1 20240801
 BF: Review: Optimization/Corrections
