--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ CR: Storage: Optimization of the cleanup
     To reduce the execution time of the requests, the cleanup is only carried
     out every minute. Parallel cleanup due to parallel requests cannot be
     excluded, but this should not be a problem.
+    TODO: Test
 
 1.3.1 20240801
 BF: Review: Optimization/Corrections
