--- a/CHANGES
+++ b/CHANGES
@@ -14,7 +14,6 @@ CR: Request: Configurable XPath delimiter of the URI
     XPath delimiter for the URI is not automatically the first symbol.
     The uniform standard is the exclamation mark !
     TODO: Add description in manual + OpenAPI
-    TODO: Test
 CR: Request: Omission of XPath via query string
     The XPath includes the query string as part of the path.
 CR: Request: Uniform identifier question mark for Base64 and hex encoded paths
@@ -31,13 +30,14 @@ CR: Storage: Optimization of the cleanup
 CR: Storage: Review and optimization
     - The name now allows word characters and minus, if the minus is not at the
       beginning and not at the end.
+      TODO: Add description in manual
     - The encoding of the file name has been optimized so that case-sensitive
       also works in case-insensitive file systems (like Windows).
     - Added the consideration of the root element. Name of storage and name of
       root element define the case-sensitive name of the storage in the file
       system. This means that the different spelling of the root element creates
       different storages.
-    TODO: Add description in manual
+      TODO: Add description in manual
 CR: Service: Review of revision management
     - Added option XMEX_STORAGE_REVISION_TYPE
       Defines what the revision which is used in the attributes ___rev and
@@ -59,37 +59,41 @@ CR: Service: Review and optimization of CONNECT
     - Storage must be initialized mandatory with CONNECT before it can be used.
     - Added alternative alias method TOUCH, if CONNECT is not allowed.
     - Added alternative PUT without XPath, if CONNECT and TOUCH is not allowed.
+    TODO: Add description in manual + OpenAPI
 CR: Service: Review and optimization of OPTIONS
     - Omission of the response header Storage-Effects.
     - Omission as an alternative to CONNECT.
       If CONNECT is not allowed use TOUCH.
       If TOUCH is not allowed use PUT without XPath.
+    TODO: Add description in manual + OpenAPI
 CR: Service: Review and optimization of GET
     - Requests with an XPath that does not address a target are responded to
       with status 204 (No Content). Previously it was status 404, but 404 now
       refers exclusively to the storage.
+    TODO: Add description in manual + OpenAPI
 CR: Service: Review and optimization of DELETE, PATCH, PUT
     - Requests with XPath that do not address a target are answered with status
       304 (Not Modified), as the request does not change the storage.
+    TODO: Add description in manual + OpenAPI
 CR: Service: Optimization of data storage
     - Unnecessary spaces and indentations are removed.
 CR: Service: Review and optimization of POST
     - Extension of the element output by the attribute encoding to specify the
       response header Content-Type.
-      TODO: Add description in manual
+    TODO: Add description in manual + OpenAPI
 CR: Test: Added option XMEX_DEBUG_MODE
     - Forces the use of the automatic incremental revision type
     - Adds hashed headers for request, response and storage to the response
     - Storage files are also created with the file extension xml and formatted
     - Storage files are saved in versions
-      TODO: Add description in manual
+    TODO: Add description in manual
 CR: Test: Review and optimization
     - Switch to the use of XMEX_DEBUG_MODE
     - Switch to new hashes in the response header
       Trace-Request-Hash, Trace-Request-Header-Hash, Trace-Request-Data-Hash
       Trace-Response-Hash, Trace-Response-Header-Hash, Trace-Response-Data-Hash
       Trace-Storage-Hash
-      TODO: Add description in manual
+    TODO: Add description in manual
 CR: Docker: Added support as Docker image
     TODO: Add description in manual
 
