#0000 Documentation: Update of content

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.5.1 2024xxxx
+BF: Service: Correction of the configuration for on-premises
+    The Apache environment variable was not read correctly.
+BF: Build: Correction of the version number distribution
+    Dockerfile was forgotten.
+
 1.5.0 20241027
 BF: Build: Review and optimization
 CR: Service: Optimization of the configuration via environment variables
