#0000 Documentation: Update of content

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
-1.5.2 2024xxxx
-CR: Content: Added snake.html as example abd little gimmick
+1.6.0 2024xxxx
+CR: Content: Added snake.html as example and little gimmick
 CR: Service: Omission of the HTTP method TOUCH
     Because it is not an official HTTP standard.
 CR: Service: Change from status code to 304 when creating
